	* Added 'WHHttpServer::newSocketConnection()' and
	'WHHttpServer::socketConnectionClosed()' signals in
	'src/wh/whhttpserver.cpp' and 'src/wh/whhttpserver.h'.
2016-02-26 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the test cases into separate directories under 'test/'.
2016-02-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a WebSockets test in 'src/tests/sockettest/'.
2016-02-29 Fred Gleason <fredg@paravelsystems.com>
	* Removed code to mask outgoing WebSocket frames in
	'src/wh/whhttpserver.cpp'.
2016-02-29 Fred Gleason <fredg@paravelsystems.com>
	* Added support for connection close status codes in
	'src/wh/whhttpserver.cpp', 'src/wh/whhttpserver.h',
	'src/wh/whhttpconnection.cpp' and 'src/wh/whhttpconnection.h'.
2016-02-29 Fred Gleason <fredg@paravelsystems.com>
	* Added 'docs/DEBUGGING.txt'.
2016-02-29 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'src/wh/whhttpserver.cpp' and
	'src/wh/whhttpconnection.cpp' that broke WebSocket support on
	Safari, Internet Explorer and Edge browsers.
2016-02-29 Fred Gleason <fredg@paravelsystems.com>
	* Implemented HTTP HEAD support in 'src/wh/whhttpserver.cpp',
	'src/wh/whhttpserver.h', 'src/wh/whhttpconnection.cpp' and
	'src/wh/whhttpconnection.h'.
2016-03-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/tests/sockettest/sockettest.js' that caused
	the WebSocket connection to fail when the server was not running
	on localhost.
2016-03-11 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up messages in 'src/tests/sockettest/sockettest_server.cpp'.
2016-03-11 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 3:0:0.
	* Incremented the package version to 0.8.10.
2016-04-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in 'src/wh/whcgipost.cpp' that broke post
	processing.
2016-04-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 3:1:0.
	* Incremented the package version to 0.8.11.