@@ -287,3 +287,6 @@
 2016-04-02 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the library version to 3:1:0.
 	* Incremented the package version to 0.8.11.
+2016-05-14 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'WHCgiApplication::renderPage()' method in
+	'src/wh/whcgiapplication.cpp' and 'src/wh/whcgiapplication.h'.
